--- a/thesis/bib/db.bib
+++ b/thesis/bib/db.bib
@@ -2,6 +2,8 @@
 % Encoding: Cp1252
 
  
+
+
 @WEB{Whoosh,
   key = {Whoosh},
   link = {http://whoosh.ca},
@@ -109,6 +111,11 @@
 }
 
 
+@MISC{Attia_arabictokenization,
+    author = {Mohammed A. Attia},
+    title = {Arabic Tokenization System},
+    year = {}
+}
 
 @MASTERSTHESIS{ Jabri,
   author = { Youssef Jabri},
